--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
@@ -50,7 +50,7 @@
   {{#if intro}}
     <div class="field" style="margin: 1em 0">
 
-      {{display-assessment id=paitent.intakeForm.id}}
+      {{!--{{display-assessment id=paitent.intakeForm.id}}--}}
 
 
       <div class="ui centered grid">
