--- a/SelfStart/SelfStartFrontEnd/app/templates/components/payment-button.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/payment-button.hbs
@@ -1,1 +1,13 @@
+<style>
+  .paypal-button-text {
+    display: inline-block;
+    white-space: pre-wrap;
+    color: transparent !important;
+  }
+
+  .paypal-button .paypal-button-text {
+    visibility: hidden;
+    color: black !important;
+  }
+</style>
 <div id="paypal-button-container"></div>
