--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
@@ -181,6 +181,18 @@
                 </button>
               </th>
             </tr>
+
+            <br><br>
+             <tr>
+              <th class>
+                Data Report
+              </th>
+              <th class>
+                <button class="circular ui icon button" {{action "openData"}}>
+                  <i class="file alternate icon"></i> 
+                </button>
+              </th>
+            </tr>
           </tbody>
         </table>
       </div>
@@ -277,7 +289,7 @@
 
       <label class="header">Payment history:</label>
 
-      
+
       <br><br><br>
 
       <label>Final outcomes: </label>
