Summary form now gets transactions

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
@@ -288,7 +288,9 @@
       <br>
 
       <label class="header">Payment history:</label>
-
+      {{#each model.transactions as |transaction|}} 
+        <label>Package #{{transaction.package}}, Date: {{transaction.date}}, Price: ${{transaction.amount}}</label>
+      {{/each}}
 
       <br><br><br>
 
