--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -28,7 +28,7 @@
   <br>
   <br>
   {{as-calendar
-    title="Schedule"
+    title="View Schedule"
     occurrences=occurrences
     defaultTimeZoneQuery="Toronto|New York"
     dayStartingTime="8:00"
