clients can now save their results into the answer models and the physiotherapist can view the answers that were saved

--- a/SelfStart/SelfStartFrontEnd/app/styles/app.scss
+++ b/SelfStart/SelfStartFrontEnd/app/styles/app.scss
@@ -231,6 +231,11 @@ a img {
   opacity: 0.75;
 }
 
+.disabled{
+  pointer-events: none;
+  opacity: 0.75;
+}
+
 #selectIcon{
   /* arrow icon for select element */
   content: '';
