--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-assessment-results.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-assessment-results.hbs
@@ -6,7 +6,7 @@
 
 
 {{#if open}}
-  {{#each assessmentModel.questions as |assess index|}}
-    {{display-answers question=assess qID = assess.id assessment=assessmentModel qNumber = index assessid = assessmentModel.id}}
+  {{#each orders as |assess index|}}
+    {{get-answers answers = ans form=form question=assess.question qID = assess.question.id assessment=assessmentModel qNumber = index assessid = assessmentModel.id}}
   {{/each}}
 {{/if}}
