--- a/SelfStart/SelfStartFrontEnd/app/templates/components/register-user.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/register-user.hbs
@@ -16,10 +16,10 @@
       <legend>Account Information</legend>
       <div class="ui hidden divider"></div>
       <div class="field" style="margin: 1em 0;">
-        {{input class="email" type="email" value = email placeholder="email" required = true}}
+        {{input class="email" type="email" value = email placeholder="email"  }}
       </div>
       <div class="field" style="margin: 1em 0;">
-        {{input class="lock" type ="password" value=encryptedPassword placeholder="Password" required = true}}
+        {{input class="lock" type ="password" value=encryptedPassword placeholder="Password" }}
       </div>
 
       <div class="ui hidden divider"></div>
@@ -29,10 +29,10 @@
       <div class="ui hidden divider"></div>
       <div class="ui two column grid">
         <div class="column " style="margin: 1em 0;">
-          {{input class="user" type="text" value = givenName placeholder="First Name" required = true}}
+          {{input class="user" type="text" value = givenName placeholder="First Name"  }}
         </div>
         <div class="column " style="margin: 1em 0;">
-          {{input class="user" type="text" value = familyName placeholder="Last Name" required = true}}
+          {{input class="user" type="text" value = familyName placeholder="Last Name"  }}
         </div>
       </div>
 
@@ -57,7 +57,7 @@
       </div>
 
       <div class="field" style="margin: 1em 0;">
-        {{input class="phone" type="text" value = phoneNumber placeholder="Phone Number" required = true}}
+        {{input class="phone" type="text" value = phoneNumber placeholder="Phone Number"  }}
       </div>
 
       <div class="ui hidden divider"></div>
@@ -68,10 +68,10 @@
 
       <div class="ui two column grid">
         <div class="column " style="margin: 1em 0;">
-          {{input class="home" type="text" value = streetNumber placeholder="Street Number" required = true}}
+          {{input class="home" type="text" value = streetNumber placeholder="Street Number"  }}
         </div>
         <div class="column " style="margin: 1em 0;">
-          {{input class="home" type="text" value = streetName placeholder="Street Name" required = true}}
+          {{input class="home" type="text" value = streetName placeholder="Street Name"  }}
         </div>
       </div>
 
@@ -80,7 +80,7 @@
           {{input class="home" type="text" placeholder="Unit Number" value = apartment}}
         </div>
         <div class="column " style="margin: 1em 0;">
-          {{input class="flag" type="text" value = postalCode placeholder="Postal/Zip Code" required = true}}
+          {{input class="flag" type="text" value = postalCode placeholder="Postal/Zip Code"  }}
         </div>
       </div>
 
