tried to fix questions

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/register-user.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/register-user.hbs
@@ -38,11 +38,11 @@
 
       <div class="ui two column grid">
         <div class="column " style="margin: 1em 0;">
-          <input class="date" type="date" value={{selectedDate}}  onchange={{action 'assignDate' value="target.value"}} required>
+          <input class="date" type="date" value={{selectedDate}}  onchange={{action 'assignDate' value="target.value"}}>
         </div>
         <div class="column " style="margin: 1em 0;">
           <p class="cd-select icon">
-            <select class="people" onchange={{action 'selectGender' value="target.value"}} required=true>
+            <select class="people" onchange={{action 'selectGender' value="target.value"}}>
               <option selected="selected">
                 Select Gender
               </option>
