--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-data-report.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-data-report.hbs
@@ -3,11 +3,27 @@
 
 {{#ui-modal name="dataModal" class="dataModal"}}
   <i class="close icon"></i>
-  <label>Answers to "</label>{{question.questionText}}<label>":</label><br>
+  <label>Answers to "</label>{{question.questionText}}<label>":</label>
+  <br>
     
-    {{#each matchedAnswers as |ans|}}
-        <label>{{ans.answer}}</label>
-    {{/each}}
+  {{#each matchedAnswers as |ans|}}
+      <label>{{ans.answer}}</label>
+  {{/each}}
+
+  <label># of 1 ratings: {{ratingGroupCount.[0]}} </label>  <br>
+  <label># of 2 ratings: {{ratingGroupCount.[1]}}  </label> <br>
+  <label># of 3 ratings: {{ratingGroupCount.[2]}} </label> <br>
+  <label># of 4 ratings: {{ratingGroupCount.[3]}}  </label> <br>
+  <label># of 5 ratings: {{ratingGroupCount.[4]}} </label>  <br>
+  <label># of 6 ratings: {{ratingGroupCount.[5]}} </label>  <br>
+  <label># of 7 ratings: {{ratingGroupCount.[6]}} </label>  <br>
+  <label># of 8 ratings: {{ratingGroupCount.[7]}} </label> <br>
+  <label># of 9 ratings: {{ratingGroupCount.[8]}} </label> <br>
+  <label># of 10 ratings: {{ratingGroupCount.[9]}} </label> <br> <br>
+  <label>Average rating: {{averageRating}} </label> <br>
+  
+  
+    {{!-- {{chart-component data=matchedAnswers}} --}}
   <div class="actions" style="padding:0">
 
     <div class="ok" style="padding:.6em; float:left; width: 50%; cursor: pointer; background: #35a785; color:white; text-align: center;">Save Report</div>
