--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-rehabplan-view.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-rehabplan-view.hbs
@@ -50,7 +50,7 @@
 
     <div class="ui buttons" style="float: right!important;">
       {{#if isEnd}}
-        <button class="green ui right labeled icon button">
+        <button class="green ui right labeled icon button"{{action "finishRehabPlan"}}>
           Done
           <i class="stop icon"></i>
         </button>
