--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-upload-photos.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-upload-photos.hbs
@@ -22,7 +22,7 @@
     </thead>
 
     <tbody>
-    {{#each model.image as |Image|}}
+    {{#each imageList as |Image|}}
       <tr>
         <td>{{Image.name}}</td>
         <td>
